2001-12-10  Mikael Hallendal  <micke@codefactory.se>

	* README (CATALOG): added info about --create

2001-12-04  Gregory Leblanc  <gleblanc@linuxweasel.com>

	* README: added some explanation of how to set up XML catalogs,
	and why they're important.
	* docbook/gnome-customization/eric_customization.xsl: Changed
	xsl:import to use the correct URI for the docbook stylesheets.
	This will cause the stylesheets to be fetched over the network,
	unless you have your XML catalogs set up correctly.
	* docbook/gnome-customization/gnome-customization.xsl: ditto

2001-11-27  Anders Carlsson  <andersca@gnu.org>

	* Makefile.am (EXTRA_DIST): Add ChangeLog.

2001-11-12  Darin Adler  <darin@bentspoon.com>

	* .cvsignore:
	* docbook/.cvsignore:
	* gnome-vfs-module/.cvsignore:
	* info/.cvsignore:
	* man/.cvsignore:
	All these directories needed .cvsignores.

2001-11-11  Frank Belew <frb@ximian.com>

	* info/Makefile.am: added $(Z_LIBS) to gnome2_info2html_LDADD

2001-11-05  Maciej Stachowiak  <mjs@noisehavoc.org>

	* gnome-vfs-module/Makefile.am: Use appropriate CFLAGS to get
	gnome-vfs module headers.

2001-11-03  Anders Carlsson  <andersca@gnu.org>

	* gnome-vfs-module/help-method.c: Fixup header paths.

2001-11-01  Anders Carlsson  <andersca@gnu.org>

	* gnome-vfs-module/help-method.c: Added #defines for help commands
	so we can change them easily if needed.
